--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600&family=Teko:wght@400;500&family=Nunito:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <button id="scroll-btn">⬇</button>
+
     <header>
         <nav>
             <div class="logo">Crafted Elegance</div>
