--- a/about.html
+++ b/about.html
@@ -145,6 +145,8 @@
     </style>
 </head>
 <body>
+    <button id="scroll-btn">⬇</button>
+
     <header>
         <nav>
             <div class="logo">Crafted Elegance</div>
