--- a/about.html
+++ b/about.html
@@ -171,6 +171,7 @@
                     <input type="text" placeholder="Search...">
                     <button class="search-btn">🔍</button>
                 </div>
+                <button id="dark-mode-toggle" class="dark-mode-btn">🌙</button>
                 <button class="cart-btn">🛒</button>
             </div>
         </nav>
