--- a/product.html
+++ b/product.html
@@ -35,6 +35,7 @@
                     <input type="text" placeholder="Search...">
                     <button class="search-btn">🔍</button>
                 </div>
+                <button id="dark-mode-toggle" class="dark-mode-btn">🌙</button>
                 <button class="cart-btn">🛒</button>
             </div>
         </nav>
