--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,22 @@
             background-position: center;
         }
 
+        #scroll-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background: var(--color-desert-sand);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 20px;
+    cursor: pointer;
+    display: none; /* Initially hidden */
+    transition: all 0.3s;
+}
+
         .contact-container {
             max-width: 1200px;
             margin: 0 auto;
