--- a/about.html
+++ b/about.html
@@ -142,6 +142,56 @@
                 padding-left: 2rem;
             }
         }
+
+        /* Dark Mode Variables */
+:root {
+    --color-bone: #e6dfcc;
+    --color-ash-gray: #b6c3b2;
+    --color-desert-sand: #cca793;
+    --color-ebony: #5e6960;
+    --background-color: #ffffff;
+    --text-color: #333333;
+    --header-bg: rgba(255, 255, 255, 0.95);
+    --footer-bg: var(--color-ebony);
+    --footer-text: white;
+}
+
+/* Dark Mode Overrides */
+[data-theme="dark"] {
+    --background-color: #1a1a1a;
+    --text-color: #e6e6e6;
+    --header-bg: rgba(26, 26, 26, 0.95);
+    --footer-bg: #121212;
+    --footer-text: #e6e6e6;
+}
+
+/* Apply Dark Mode Styles */
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+}
+
+header {
+    background: var(--header-bg);
+}
+
+footer {
+    background: var(--footer-bg);
+    color: var(--footer-text);
+}
+
+/* Dark Mode Toggle Button */
+.dark-mode-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    transition: transform 0.3s;
+}
+
+.dark-mode-btn:hover {
+    transform: scale(1.1);
+}
     </style>
 </head>
 <body>
