--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 </div>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html">Sign Up</a>
             </div>
             <div class="nav-actions">
                 <div class="search-container">
