--- a/about.html
+++ b/about.html
@@ -215,6 +215,8 @@ footer {
                 </div>
                 <a href="about.html" class="active">About Us</a>
                 <a href="contact.html">Contact</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html">Sign Up</a>
             </div>
             <div class="nav-actions">
                 <div class="search-container">
