--- a/contact.html
+++ b/contact.html
@@ -202,6 +202,8 @@ footer {
                 </div>
                 <a href="#">About Us</a>
                 <a href="contact.html" class="active">Contact</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html">Sign Up</a>
             </div>
             <div class="nav-actions">
                 <div class="search-container">
